--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         }  
   </style>
  <body>
-  <div id="jwplayerDiv" style="display: none;"></div>
+  <div id="jwplayerDiv" </div>
 
   <script src="script.js"></script>
  
