--- a/index.html
+++ b/index.html
@@ -247,6 +247,9 @@
              max-height: 100%   
         }  
   </style>
+        <script src="//content.jwplatform.com/libraries/SAHhwvZq.js"></script>  
+
+<div id="jwplayerDiv"></div>
 <body>
   <div id="jwplayerDiv" style="display: none;"></div>
 
