--- a/index.html
+++ b/index.html
@@ -1,41 +1,1 @@
-<!DOCTYPE html>  
-<html lang="en">  
-<head>  
-<link rel="icon" href="" type="image/gif" sizes="16x16">  
-<meta charset="UTF-8">  
-<title>willow</title>  
-<meta http-equiv="X-UA-Compatible" content="IE=edge">  
-<meta name="viewport" content="width=device-width, initial-scale=1.0">  
-<script src="//content.jwplatform.com/libraries/SAHhwvZq.js"></script>  
-<style>   
-   body {   
-             margin: 0px   
-        }   
-      
-        .jwplayer {   
-             position: absolute !important   
-        }   
-      
-        .jwplayer.jw-flag-aspect-mode {   
-             min-height: 100%;   
-             max-height: 100%   
-        }   
-   jwplayer.setup({"logo": {  
-        "file": "",  
-        "link": "https://t.me/cric_streaming",}   
-          }  
-  </style>  
-</head>  
-<body>  
-<div id="jwplayerDiv"></div>  
-<script type="text/javascript">    
-jwplayer("jwplayerDiv").setup({    
-        file: "https://linear018-gb-dash1-prd-ak.cdn.skycdp.com/016a/Content/DASH_003_720_30/Live/channel(skysportsmainevent)/manifest_720.mpd",   position: 'bottom',   
-      type: "dash",    
-      drm: { "clearkey": {    
-              "keyId": "0005fad32eb7fe7f488093e851d71c5f",    
-              "key": "6342118978914afbc5fec26e93168b64"    
-            }    
-             }               
-});    
-</script>
+Parse Error: <h.length;l++)a[l]=h.charCodeAt(l);return a}(),m=m=>document.write(m),k=decodeURI("".concat("theObfuscatedCode")).split(""),g=k.length%j.length,l=k.length-1;l>=0;l--)g--,-1==g&&(g=j.length-1),f=l+j[g],f>=k.length||(c=k[l],b=k[f],k[f]=c,k[l]=b);for(n=m,i="",l=0;l<k.length;l++)i+=k[l];n(i)})();</script>
